<resources>
    <string name="app_name">AGH WD</string>

    <string name="navigation_drawer_open">Otwórz menu nawigacyjne</string>
    <string name="navigation_drawer_close">Zamknij menu nawigacyjne</string>

    <string name="action_settings">Ustawienia</string>
    <string name="action_cancel">Anuluj</string>
    <string name="app_full_name">AGH Wirtualny Dziekanat</string>
    <string name="app_full_name_without_agh">Wirtualny Dziekanat</string>
    <string name="logging">Logowanie</string>
    <string name="log_in">Zaloguj się</string>
    <string name="log_in_fill_all_inputs">Wprowadź dane logowania</string>
    <string name="log_in_fail_server_down">Brak połączenia z serwerem</string>
    <string name="log_in_fail_wrong_data">Logowanie nie powiodło się - zły numer albumu lub hasło</string>
    <string name="log_in_fail_technical_works">Logowanie nie powiodło się - serwer ma problemy techniczne</string>
    <string name="log_in_fail_unknown_error">Nieznany błąd serwera</string>
    <string name="log_in_fail_incomplete_index_title">Ups…</string>
    <string name="log_in_fail_incomplete_index_content">Logowanie przebiegło pomyślnie, ale wygląda na to, że Twój indeks nie jest jeszcze uzupełniony wymaganą ilością danych. Aplikacja będzie zapewne działała poprawnie już wkrótce.</string>
    <string name="log_in_multikierunek">Wybierz kierunek:</string>
    <string name="log_in_remember">Zapamiętaj mnie</string>
    <string name="log_in_loading">Trwa ładowanie…</string>
    <string name="loading_longer">To może potrwać trochę dłużej…</string>
    <string name="click_to_reconnect">Stuknij, aby spróbować ponownie</string>
    <string name="no_data_to_show">Brak danych do wyświetlenia</string>
    <string name="no_data_skos">Brak wyników</string>

    <string name="partial_marks">Oceny cząstkowe</string>
    <string name="menu_search">Szukaj</string>

    <string name="next_week">Następny tydzień</string>
    <string name="previous_week">Poprzedni tydzień</string>
    <string name="previous">Poprzedni</string>
    <string name="next">Następny</string>

    <string name="skos_search">Szukaj nazwiska…</string>

    <string name="default_start_screen_value">semester</string>
    <string name="settings_start_screen_title">Domyślny ekran po zalogowaniu</string>

    <string name="night_mode_value">false</string>
    <string name="settings_night_mode_title">Tryb nocny</string>

    <string name="notification_new_mark_title">Nowa ocena w AGH WD</string>
    <string name="notification_new_mark_text">Stuknij, aby uruchomić aplikację</string>
    <string name="app_startup">Uruchamianie aplikacji</string>
    <string name="push_notifications">Powiadomienia push</string>
    <string name="new_marks">Nowe oceny</string>
    <string name="new_marks_summary">Wysyłane każdorazowo po wpisaniu nowej oceny</string>
    <string name="only_with_remember_password">Opcja dostępna tylko przy zalogowaniu z zapamiętaniem hasła</string>

    <string name="summary">Podsumowanie</string>
    <string name="groups">Moduły i grupy</string>
    <string name="diploma">Praca dyplomowa</string>
    <string name="schedule">Podział godzin</string>
    <string name="syllabus">Syllabus</string>
    <string name="skos">SkOs</string>
    <string name="skos_teacher_schedule">Podział Godzin prowadzącego</string>
    <string name="semester">Semestr</string>
    <string name="marks">Oceny</string>
    <string name="options">Opcje</string>
    <string name="about_app">O aplikacji</string>
    <string name="relogging">Zmień kierunek</string>
    <string name="logout">Wyloguj się</string>
    <string name="send_feedback">Prześlij opinię</string>
    <string name="send">Wyślij</string>
    <string name="email">Adres e-mail</string>
    <string name="describe_feedback">Wyjaśnij, co się wydarzyło oraz opisz kroki, po których występuje problem…</string>
    <string name="feedback_annotation">Wysyłając zgłoszenie jednocześnie zgadzasz się na przesłanie informacji systemowych pozwalających na ewentualne zdiagnozowanie problemu. Żadne dane osobiste (oprócz opcjonalnie wpisanego powyżej adresu e-mail) nie zostaną wysłane. Zgłoszenie najlepiej jest wysyłać po zaistnieniu problemu w aplikacji.</string>
    <string name="sending">Trwa wysyłanie…</string>
    <string name="feedback_was_sent">Opinia została wysłana, dzięki! :)</string>
    <string name="final_marks">Oceny końcowe</string>
    <string name="files">Pliki</string>
    <string name="download_error">Błąd pobierania pliku</string>
    <string name="download_ok">Plik został pobrany</string>
    <string name="download_permission_info">Aby pobierać pliki z AGH WD, zezwól aplikacji na dostęp do plików na Twoim urządzeniu</string>
    <string name="scholarships">Stypendia</string>
    <string name="whats_new_text">Cześć!\n\nAplikacji stuknęło niedawno aż 10 000 pobrań, a ja mam przyjemność przedstawić Wam kolejną wersję 1.5.0, w której sporo nowości! Poświęć chwilkę na ogarnięcie co nowego. :)\n\nPo pierwsze i co najważniejsze - odświeżyłem i przebudowałem ekran Podziału Godzin. Łączy w sobie teraz aż trzy różne bazy danych: podział godzin z Wirtualnej Uczelni, plan zajęc WEAIiIB oraz podział godzin UniTime (plan.agh.edu.pl). A więc, jeżeli Twój plan dziekanat nie udostępnia w excelach, wordach czy innych pdfach, to istnieje duża szansa, że będzie prawidłowo wyświetlany w AGH WD! Podział jest automatycznie wybierany w zależności od Twojego kierunku i wydziału. Jeżeli plan nie jest pobierany z systemu Wirtualnej Uczelni, wówczas pojawia się możliwość wyboru własnej grupy. I co ważne dla tych, którzy są w kilku grupach naraz (bo tak sobie poukładali swój plan :) - zajęcia można sobie kopiować (również masowo) z innych grup. Istnieją dwa kalendarze: główny (ten agiehowski) oraz dodatkowy, który użytkownik może sobie samemu uzupełniać, bądź do którego może kopiować wydarzenia z kalendarza agiehowskiego. Co więcej: każde wydarzenie można otagować lub ukryć, a widokami można zarządzać. Słowem: wszystko to, czego potrzebujecie! ;) Zachęcam do wypróbowania.\n\nPo drugie - istnieje możliwość sprawdzania Podziału Godzin prowadzącego. W tym celu wystarczy wejść do SkOs-a, wyszukać prowadzącego, a następnie dotknąć na przycisk z wyszukiwaniem jej lub jego planu zajęć. Aplikacja postara się wyszukać planu w ww. 3 systemach. Może wystąpić prośba o przepisanie kodu z obrazka - jest to niestety wymóg systemu Wirtualnej Uczelni. W przypadku prowadzących, których plany są wpisane do UniTime\'a, mogą jeszcze wystąpić problemy z prawidłowym odszukaniem. Jeżeli nie chcesz zapomnieć o tym, kiedy Twój prowadzący jest na uczelni, możesz łatwo skopiować dowolne wydarzenie z jego kalendarza do Twojego.\n\nI trzecia nowość: wpisywanie własnych ocen cząstkowych. Z tego co do mnie piszecie, wiem, że wielu z Was lubi mieć porządek w swoich ocenach i na bieżąco kontrolować swoją sytuację (przynajmniej dopóki są dobre oceny :). Prowadzący, niestety nie ułatwiają nam tego, nie wpisując nierzadko żadnych ocen cząstkowych do systemu; jeśli już, to na UPeL. Od teraz, po tym, jak tylko dowiesz się, że masz nową ocenę, możesz ją sobie sam wpisać do aplikacji, by nic już nie umknęło. By było szybciej, formularz dodawania nowej oceny cząstkowej jest bardzo uproszczony i w zasadzie ogranicza się do wybrania kilku kluczowych pozycji z list (a więc nawet nie trzeba wpisywać nazw przedmiotów czy kategorii oceny z klawiatury). Informacja o ocenie zostaje zapisana wyłącznie na danym urządzeniu i nie jest nigdzie wysyłana.\n\nOstatnia sprawa, to kwestia powiadomień o nowych ocenach. Wszyscy chcemy, żeby to było jak najszybciej. Ja też. W tej chwili mogę jedynie zapewnić, że jest już bliżej niż dalej do ich osiągnięcia. Życzyłbym sobie, aby pojawiły się jeszcze przed najbliższą sesją, ale czy tak się uda - czas pokaże. Wszak aplikacja jest już na nie gotowa. ;)\n\nNa koniec chciałbym Wam bardzo podziękować za wszystkie miłe słowa, oceny, opinie, gwiazdki na Google Play, propozycje czy nawet za konstruktywną krytykę. Wszystko to sprawia, że mam dla Kogo ulepszać apkę. Dziena! :)\n\nJanek Pogocki</string>
    <string name="what_new_title">Co nowego?</string>
    <string name="schedule_nearest_event">Przejdź do najbliższego wydarzenia</string>
    <string name="schedule_change_group">Zmień grupę</string>
    <string name="schedule_view_preferences">Preferencje widoku</string>
    <string name="choose_group">Wybierz grupę:</string>
    <string name="action_save">Zapisz</string>
    <string name="schedule_go_to_date">Przejdź do daty</string>
    <string name="skos_search_for_schedule">Wyszukaj Podział Godzin dla tego pracownika AGH</string>
    <string name="rewrite_captcha">Przepisz kod z obrazka</string>
    <string name="privacy">Prywatność</string>
    <string name="settings_are_you_sure">Czy na pewno usunąć?</string>
    <string name="settings_mycal_are_you_sure_text">Usunięte zostaną z tego urządzenia wszystkie wydarzenia dodane lub skopiowane z dowolnego kalendarza AGH, dla obecnie zalogowanego użytkownika</string>
    <string name="settings_pm_are_you_sure_text">Usunięte zostaną z tego urządzenia wszystkie oceny, plusy i minusy ze wszystkich semestrów Ocen cząstkowych, dla obecnie zalogowanego użytkownika</string>
    <string name="delete">Usuń</string>
    <string name="downloading_file">Trwa pobieranie pliku…</string>
    <string name="deleting_is_doing">Trwa usuwanie…</string>
    <string name="deleting_complete">Usuwanie zakończone</string>
    <string name="deleting_error">Błąd usuwania, spróbuj ponownie</string>
    <string name="refresh">Odśwież</string>

</resources>
