<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/summaryItems" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_menu_summary"
            android:title="@string/summary" />

        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_menu_marks"
            android:title="@string/final_marks" />

        <item
            android:id="@+id/nav_partial_marks"
            android:icon="@drawable/ic_menu_partial_marks"
            android:title="@string/partial_marks" />

        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_groups"
            android:title="@string/groups" />

        <item
            android:id="@+id/nav_diploma"
            android:icon="@drawable/ic_menu_diploma"
            android:title="@string/diploma" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_menu_files"
            android:title="@string/files" />

        <item
            android:id="@+id/nav_scholarships"
            android:icon="@drawable/ic_menu_scholarships"
            android:title="@string/scholarships" />

        <item
            android:id="@+id/nav_syllabus"
            android:icon="@drawable/ic_menu_syllabus"
            android:title="@string/syllabus" />

        <item
            android:id="@+id/nav_skos"
            android:icon="@drawable/ic_menu_skos"
            android:title="@string/skos" />
    </group>

    <item
        android:id="@+id/settings"
        android:title="@string/options">
        <menu>
            <group
                android:id="@+id/settingsItems"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/action_settings" />

                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_menu_feedback"
                    android:title="@string/send_feedback" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/about_app" />

                <item
                    android:id="@+id/nav_relogging"
                    android:icon="@drawable/ic_menu_relogging"
                    android:title="@string/relogging"
                    android:visible="false" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>


</menu>
