<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory
        android:title="@string/app_startup"
        android:key="pref_key_startup_settings">

        <ListPreference
            android:key="default_start_screen"
            android:title="@string/settings_start_screen_title"
            android:defaultValue="@string/default_start_screen_value"
            android:negativeButtonText="@string/action_cancel"
            android:summary="%s"
            android:entries="@array/start_screen_entries"
            android:entryValues="@array/start_screen_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/push_notifications"
        android:key="pref_key_notifications">

        <SwitchPreference
            android:key="marks_notifications"
            android:title="@string/new_marks"
            android:defaultValue="true"
            android:summary="@string/new_marks_summary" />

        <SwitchPreference
            android:key="news_notifications"
            android:title="@string/agh_urgent_info"
            android:defaultValue="true"
            android:summary="@string/agh_urgent_info_summary" />

    </PreferenceCategory>
</PreferenceScreen>