<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbarSpinner"
        android:orderInCategory="100"
        android:visible="false"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_schedule_now"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_schedule_white"
        android:title="@string/schedule_nearest_event"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_schedule_go_to_date"
        android:orderInCategory="101"
        android:title="@string/schedule_go_to_date"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_schedule_change_group"
        android:orderInCategory="102"
        android:title="@string/schedule_change_group"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_schedule_view_settings"
        android:orderInCategory="103"
        android:title="@string/schedule_view_preferences"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_schedule_refresh"
        android:orderInCategory="104"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send"
        android:orderInCategory="100"
        android:icon="@drawable/ic_send"
        android:title="@string/send"
        android:visible="false"
        app:showAsAction="always" />
</menu>
