<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.janpogocki.agh.wirtualnydziekanat.FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/rlData"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:id="@+id/editTextEmail" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/editTextFeedback"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:ems="10"
            android:hint="@string/describe_feedback"
            android:inputType="textMultiLine|textCapSentences" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/feedback_annotation"
            android:gravity="bottom"
            android:foregroundGravity="bottom"
            android:textAlignment="gravity"
            android:layout_weight="1"
            android:textSize="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlLoader"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/progressBar3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sending"
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/progressBar3"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/rlOffline">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_offline"
            style="@style/BlackTint"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/click_to_reconnect"
            android:id="@+id/textView16"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/rlSent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:id="@+id/imageView4"
            android:src="@drawable/ic_check"
            style="@style/BlackTint"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/feedback_was_sent"
            android:id="@+id/textView17"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="\n\nPodoba Ci się AGH WD?\nOceń aplikację w Google Play\n★ ★ ★ ★ ★\n"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/googlePlayLink"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_below="@+id/textView17"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>


</RelativeLayout>
